--- a/UAP.ipynb
+++ b/UAP.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyM4dH4oYpC90GDVKmd3N+bV",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Vinay2304/OIBSIP_TASK2/blob/main/UAP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -31,7 +43,7 @@
       "metadata": {
         "id": "f4OAwLwxLeh7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -42,7 +54,7 @@
       "metadata": {
         "id": "AQgQjv1PMtnO"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +65,7 @@
       "metadata": {
         "id": "oljsN32dLgVr"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +81,7 @@
         "id": "olb-L-JJLok7",
         "outputId": "8d8cc550-b75a-4cd8-d060-186e273f604a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +413,7 @@
         "id": "16xT78DmLqes",
         "outputId": "ad1b2dbe-2187-4501-d076-d6af743e67bf"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +450,7 @@
         "id": "9SQ630hMLwT3",
         "outputId": "6cd1dec0-4a6d-43b9-9cca-7136cecd672e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +782,7 @@
         "id": "FdAERGukL2Il",
         "outputId": "944858b4-d79e-490d-c699-d99ad1f64300"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +808,7 @@
         "id": "Tgu5P1oRMMzp",
         "outputId": "7efed070-d24a-49e4-8814-b017a768aa97"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +864,7 @@
         "id": "4HVRDmiRMZU2",
         "outputId": "e64f742e-9396-4daa-eb96-09af8d8b08b8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +902,7 @@
         "id": "6NHPNa6VM1jH",
         "outputId": "b1296b41-2cb1-4925-dd71-aa782b8b34c3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
